Trying to fix :focus on ios #2

--- a/main.css
+++ b/main.css
@@ -140,7 +140,7 @@ body {
   transition: 0.8s;
 }
 
-.interactive-area__btn:focus {
+.interactive-area__btn:focus-within {
   transform: scale(1.1);
   transition: 0.8s;
 }
